Update email,storage feature
